freefare/lib/src/ffi/libfreefare.g.dart


  int nfc_initiator_transceive_bytes_timed(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTx,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    ffi.Pointer<ffi.Uint32> cycles,
  ) {
    return _nfc_initiator_transceive_bytes_timed(
      pnd,
      pbtTx,
      szTx,
      pbtRx,
      szRx,
      cycles,
    );
  }

  late final _nfc_initiator_transceive_bytes_timedPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<nfc_device>,
                  ffi.Pointer<ffi.Uint8>,
                  ffi.Size,
                  ffi.Pointer<ffi.Uint8>,
                  ffi.Size,
                  ffi.Pointer<ffi.Uint32>)>>(
      'nfc_initiator_transceive_bytes_timed');
  late final _nfc_initiator_transceive_bytes_timed =
      _nfc_initiator_transceive_bytes_timedPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int,
              ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint32>)>();

  int nfc_initiator_transceive_bits_timed(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTxBits,
    ffi.Pointer<ffi.Uint8> pbtTxPar,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    ffi.Pointer<ffi.Uint8> pbtRxPar,
    ffi.Pointer<ffi.Uint32> cycles,
  ) {
    return _nfc_initiator_transceive_bits_timed(
      pnd,
      pbtTx,
      szTxBits,
      pbtTxPar,
      pbtRx,
      szRx,
      pbtRxPar,
      cycles,
    );
  }

  late final _nfc_initiator_transceive_bits_timedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint32>)>>('nfc_initiator_transceive_bits_timed');
  late final _nfc_initiator_transceive_bits_timed =
      _nfc_initiator_transceive_bits_timedPtr.asFunction<
          int Function(
              ffi.Pointer<nfc_device>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint32>)>();

  int nfc_initiator_target_is_present(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<nfc_target> pnt,
  ) {
    return _nfc_initiator_target_is_present(
      pnd,
      pnt,
    );
  }

  late final _nfc_initiator_target_is_presentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>,
              ffi.Pointer<nfc_target>)>>('nfc_initiator_target_is_present');
  late final _nfc_initiator_target_is_present =
      _nfc_initiator_target_is_presentPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_target>)>();

  int nfc_target_init(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<nfc_target> pnt,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    int timeout,
  ) {
    return _nfc_target_init(
      pnd,
      pnt,
      pbtRx,
      szRx,
      timeout,
    );
  }

  late final _nfc_target_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_target>,
              ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Int)>>('nfc_target_init');
  late final _nfc_target_init = _nfc_target_initPtr.asFunction<
      int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_target>,
          ffi.Pointer<ffi.Uint8>, int, int)>();

  int nfc_target_send_bytes(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTx,
    int timeout,
  ) {
    return _nfc_target_send_bytes(
      pnd,
      pbtTx,
      szTx,
      timeout,
    );
  }

  late final _nfc_target_send_bytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>,
              ffi.Size, ffi.Int)>>('nfc_target_send_bytes');
  late final _nfc_target_send_bytes = _nfc_target_send_bytesPtr.asFunction<
      int Function(
          ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int, int)>();

  int nfc_target_receive_bytes(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    int timeout,
  ) {
    return _nfc_target_receive_bytes(
      pnd,
      pbtRx,
      szRx,
      timeout,
    );
  }

  late final _nfc_target_receive_bytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>,
              ffi.Size, ffi.Int)>>('nfc_target_receive_bytes');
  late final _nfc_target_receive_bytes =
      _nfc_target_receive_bytesPtr.asFunction<
          int Function(
              ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int, int)>();

  int nfc_target_send_bits(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtTx,
    int szTxBits,
    ffi.Pointer<ffi.Uint8> pbtTxPar,
  ) {
    return _nfc_target_send_bits(
      pnd,
      pbtTx,
      szTxBits,
      pbtTxPar,
    );
  }

  late final _nfc_target_send_bitsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>,
              ffi.Size, ffi.Pointer<ffi.Uint8>)>>('nfc_target_send_bits');
  late final _nfc_target_send_bits = _nfc_target_send_bitsPtr.asFunction<
      int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Uint8>)>();

  int nfc_target_receive_bits(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Uint8> pbtRx,
    int szRx,
    ffi.Pointer<ffi.Uint8> pbtRxPar,
  ) {
    return _nfc_target_receive_bits(
      pnd,
      pbtRx,
      szRx,
      pbtRxPar,
    );
  }

  late final _nfc_target_receive_bitsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>,
              ffi.Size, ffi.Pointer<ffi.Uint8>)>>('nfc_target_receive_bits');
  late final _nfc_target_receive_bits = _nfc_target_receive_bitsPtr.asFunction<
      int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Char> nfc_strerror(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_strerror(
      pnd,
    );
  }

  late final _nfc_strerrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<nfc_device>)>>('nfc_strerror');
  late final _nfc_strerror = _nfc_strerrorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<nfc_device>)>();

  int nfc_strerror_r(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Char> buf,
    int buflen,
  ) {
    return _nfc_strerror_r(
      pnd,
      buf,
      buflen,
    );
  }

  late final _nfc_strerror_rPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('nfc_strerror_r');
  late final _nfc_strerror_r = _nfc_strerror_rPtr.asFunction<
      int Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Char>, int)>();

  void nfc_perror(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _nfc_perror(
      pnd,
      s,
    );
  }

  late final _nfc_perrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Char>)>>('nfc_perror');
  late final _nfc_perror = _nfc_perrorPtr.asFunction<
      void Function(ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Char>)>();

  int nfc_device_get_last_error(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_device_get_last_error(
      pnd,
    );
  }

  late final _nfc_device_get_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<nfc_device>)>>(
          'nfc_device_get_last_error');
  late final _nfc_device_get_last_error = _nfc_device_get_last_errorPtr
      .asFunction<int Function(ffi.Pointer<nfc_device>)>();

  ffi.Pointer<ffi.Char> nfc_device_get_name(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_device_get_name(
      pnd,
    );
  }

  late final _nfc_device_get_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<nfc_device>)>>('nfc_device_get_name');
  late final _nfc_device_get_name = _nfc_device_get_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<nfc_device>)>();

  ffi.Pointer<ffi.Char> nfc_device_get_connstring(
    ffi.Pointer<nfc_device> pnd,
  ) {
    return _nfc_device_get_connstring(
      pnd,
    );
  }

  late final _nfc_device_get_connstringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<nfc_device>)>>('nfc_device_get_connstring');
  late final _nfc_device_get_connstring = _nfc_device_get_connstringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<nfc_device>)>();

  int nfc_device_get_supported_modulation(
    ffi.Pointer<nfc_device> pnd,
    int mode,
    ffi.Pointer<ffi.Pointer<ffi.Int32>> supported_mt,
  ) {
    return _nfc_device_get_supported_modulation(
      pnd,
      mode,
      supported_mt,
    );
  }

  late final _nfc_device_get_supported_modulationPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Int32,
                  ffi.Pointer<ffi.Pointer<ffi.Int32>>)>>(
      'nfc_device_get_supported_modulation');
  late final _nfc_device_get_supported_modulation =
      _nfc_device_get_supported_modulationPtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, int,
              ffi.Pointer<ffi.Pointer<ffi.Int32>>)>();

  int nfc_device_get_supported_baud_rate(
    ffi.Pointer<nfc_device> pnd,
    int nmt,
    ffi.Pointer<ffi.Pointer<ffi.Int32>> supported_br,
  ) {
    return _nfc_device_get_supported_baud_rate(
      pnd,
      nmt,
      supported_br,
    );
  }

  late final _nfc_device_get_supported_baud_ratePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Int32,
                  ffi.Pointer<ffi.Pointer<ffi.Int32>>)>>(
      'nfc_device_get_supported_baud_rate');
  late final _nfc_device_get_supported_baud_rate =
      _nfc_device_get_supported_baud_ratePtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, int,
              ffi.Pointer<ffi.Pointer<ffi.Int32>>)>();

  int nfc_device_get_supported_baud_rate_target_mode(
    ffi.Pointer<nfc_device> pnd,
    int nmt,
    ffi.Pointer<ffi.Pointer<ffi.Int32>> supported_br,
  ) {
    return _nfc_device_get_supported_baud_rate_target_mode(
      pnd,
      nmt,
      supported_br,
    );
  }

  late final _nfc_device_get_supported_baud_rate_target_modePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Int32,
                  ffi.Pointer<ffi.Pointer<ffi.Int32>>)>>(
      'nfc_device_get_supported_baud_rate_target_mode');
  late final _nfc_device_get_supported_baud_rate_target_mode =
      _nfc_device_get_supported_baud_rate_target_modePtr.asFunction<
          int Function(ffi.Pointer<nfc_device>, int,
              ffi.Pointer<ffi.Pointer<ffi.Int32>>)>();

  int nfc_device_set_property_int(
    ffi.Pointer<nfc_device> pnd,
    int property,
    int value,
  ) {
    return _nfc_device_set_property_int(
      pnd,
      property,
      value,
    );
  }

  late final _nfc_device_set_property_intPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Int32,
              ffi.Int)>>('nfc_device_set_property_int');
  late final _nfc_device_set_property_int = _nfc_device_set_property_intPtr
      .asFunction<int Function(ffi.Pointer<nfc_device>, int, int)>();

  int nfc_device_set_property_bool(
    ffi.Pointer<nfc_device> pnd,
    int property,
    bool bEnable,
  ) {
    return _nfc_device_set_property_bool(
      pnd,
      property,
      bEnable,
    );
  }
